load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_python//python:defs.bzl", "py_library")

npm_link_all_packages()

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
)

ts_project(
    name = "index_ts",
    srcs = [
        "admin_auth.tsx",
        "icons.tsx",
        "index.css",
        "index.tsx",
        "states.css",
        "states.tsx",
        "tasks.css",
        "tasks.tsx",
    ],
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/react",
        ":node_modules/react-dom",
        ":node_modules/react-json-view",
        "//:node_modules/@bufbuild/protobuf",
        "//:node_modules/@reboot-dev/reboot-api",
        "//:node_modules/@reboot-dev/reboot-react",
        "//:node_modules/@reboot-dev/reboot-web",
        "//rbt/v1alpha1:tasks_js_proto",
        "//rbt/v1alpha1/inspect:inspect_js_proto",
    ],
)

esbuild(
    name = "bundle",
    srcs = [
        ":index_ts",
    ],
    bazel_sandbox_plugin = False,
    entry_point = "index.js",
    format = "esm",
    output = "bundle.js",
    output_css = "bundle.css",
    platform = "browser",
)

py_library(
    name = "servicer_py",
    srcs = ["servicer.py"],
    data = [
        "index.html",
        ":bundle",
    ],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "//rbt/v1alpha1/inspect:inspect_py_grpc",
        "//rbt/v1alpha1/inspect:inspect_py_proto",
        "//reboot/aio/auth:admin_auth_py",
        "//reboot/templates:tools_py",
        "@com_github_reboot_dev_reboot//reboot/aio:aborted_py",
        "@com_github_reboot_dev_reboot//reboot/aio:state_managers_py",
        "@com_github_reboot_dev_reboot//reboot/aio:stubs_py",
        "@com_github_reboot_dev_reboot//reboot/aio/internals:middleware_py",
    ],
)
