load("@rbt_pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "context_py",
    srcs = ["context.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":helpers_py",
        "//reboot:uuidv7_py",
        "@com_github_reboot_dev_reboot//reboot/aio:external_py",
        requirement("mcp"),
        requirement("starlette"),
    ],
)

py_library(
    name = "request_state_py",
    srcs = ["request_state.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)

py_library(
    name = "iframe_py",
    srcs = ["iframe.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":request_state_py",
    ],
)

py_library(
    name = "ui_py",
    srcs = ["ui.py"],
    # Served verbatim by `dev_inline_html` when a Claude client hits a
    # UI over a free-tier ngrok tunnel; read from runfiles at runtime.
    data = ["claude_ngrok_error.html"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":iframe_py",
        "//reboot:settings_py",
    ],
)

py_library(
    name = "factories_py",
    srcs = ["factories.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":context_py",
        ":request_state_py",
        "@com_github_reboot_dev_reboot//log:log_py",
        requirement("mcp"),
        requirement("anyio"),
        requirement("starlette"),
    ],
)

py_library(
    name = "helpers_py",
    srcs = ["helpers.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
)

# Aggregates all MCP-related Python libraries.
py_library(
    name = "python",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        ":context_py",
        ":factories_py",
        ":helpers_py",
        ":iframe_py",
        ":request_state_py",
        ":ui_py",
    ],
)
