load("@rbt_pypi//:requirements.bzl", "requirement")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_python//python:defs.bzl", "py_library")
load("@com_github_reboot_dev_reboot//bazel:linux_transition.bzl", "cc_binary_linux")

cc_binary(
    name = "local_envoy_nanny",
    srcs = [
        "local_envoy_nanny.cc",
    ],
    # Because we bind mount this into a container we can't even rely
    # on system libraries like libc. Unfortunately, using only
    # 'linkstatic' is insufficient and we also need to set linkopts.
    # On macOS, this is not supported ("Apple builds do not support
    # statically linked binaries."), so this target is disabled.
    linkopts = [
        "-static",
    ],
    linkstatic = True,
    target_compatible_with = select({
        "@platforms//os:osx": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary_linux(
    name = "local_envoy_nanny_linux",
    data = ":local_envoy_nanny",
)

py_library(
    name = "local_envoy_py",
    srcs = [
        "local_envoy.py",
    ],
    data = [
        ":sha1_lua",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("grpcio"),
        requirement("protobuf"),
        requirement("grpcio-health-checking"),
        requirement("pyyaml"),
        "//envoy/config/bootstrap/v3:bootstrapv3_py_proto",
        "//envoy/service/discovery/v3:discoveryv3_py_grpc",
        "//envoy/service/discovery/v3:discoveryv3_py_proto",
        "//reboot/routing:envoy_config_py",
        "//reboot/routing:xds_server_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:headers_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:tracing_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:types_py",
        "@com_github_reboot_dev_reboot//rebootdev/ssl:localhost_py",
    ],
)

py_library(
    name = "local_envoy_factory_py",
    srcs = [
        "docker_local_envoy.py",
        "executable_local_envoy.py",
        "local_envoy_factory.py",
    ],
    data = [
        ":local_envoy_nanny_linux",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("grpcio"),
        requirement("aiohttp"),
        requirement("aiofiles"),
        requirement("protobuf"),
        ":local_envoy_py",
        "//reboot/templates:tools_py",
        "@com_github_reboot_dev_reboot//log:log_py",
        "@com_github_reboot_dev_reboot//rbt/v1alpha1:react_py_proto",
        "@com_github_reboot_dev_reboot//rebootdev:helpers_py",
        "@com_github_reboot_dev_reboot//rebootdev:settings_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:headers_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:servicers_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:signals_py",
        "@com_github_reboot_dev_reboot//rebootdev/aio:types_py",
    ],
)

filegroup(
    name = "sha1_lua",
    srcs = glob(
        ["sha1/src/**/*"],
    ),
    visibility = ["//visibility:public"],
)
