load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "export_import_converters_py",
    srcs = ["export_import_converters.py"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_reboot_dev_reboot//rebootdev/aio:types_py",
        "@com_github_reboot_dev_reboot//rebootdev/consensus:sidecar_py",
    ],
)
